sandbox/output
StringCalculator.java:25: error: cannot find symbol
                result += Integer.valueOf(i);
                ^
  symbol:   variable result
  location: class StringCalculator
StringCalculator.java:27: error: cannot find symbol
            return result;
                   ^
  symbol:   variable result
  location: class StringCalculator
2 errors
